--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  background-color: chocolate;
+  width: 800px;
+  margin: 0 auto;
+  height: 100vh;
+  border-radius: 3px;
+  padding-top: 10px;
 }
 
 .App-logo {
@@ -9,7 +15,7 @@
 
 .App {
   text-align: center;
-  font-family: Arial, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .task-input {
@@ -19,6 +25,18 @@
 
 input{
   margin-right: 5px;
+  border: none;
+}
+
+input::placeholder{
+  font-size: .6rem;
+  text-align: center;
+}
+
+button{
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 ul {
@@ -41,6 +59,9 @@ li span {
 li input {
   flex: 1;
   margin-right: 10px;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
 }
 
 li button {
@@ -49,6 +70,8 @@ li button {
   border: none;
   padding: 5px 10px;
   cursor: pointer;
+  border: none;
+  border-radius: 3px;
 }
 
 
