--- a/src/App.css
+++ b/src/App.css
@@ -26,16 +26,20 @@
 input{
   margin-right: 5px;
   border: none;
+  padding: .6rem;
+  border-radius: 3px;
 }
 
 input::placeholder{
-  font-size: .6rem;
+  font-size: .8rem;
   text-align: center;
+  color: cornflowerblue;
 }
 
 button{
   border: none;
   border-radius: 3px;
+  padding: .6rem;
   cursor: pointer;
 }
 
